reduce using mysql